capitolul 6 swagger si open api