@@ -1,5 +1,8 @@
 package se.magnus.microservices.core.product_composite_service.services;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import org.springframework.web.bind.annotation.RestController;
 import se.magnus.api.composite.product.*;
 import se.magnus.api.core.product.Product;
@@ -13,52 +16,91 @@ import java.util.stream.Collectors;
 @RestController
 public class ProductCompositeServiceImpl implements ProductCompositeService {
 
-    private final ServiceUtil serviceUtil;
-    private final ProductCompositeIntegration productCompositeIntegration;
+  private static final Logger LOG = LoggerFactory.getLogger(ProductCompositeServiceImpl.class);
 
-    public ProductCompositeServiceImpl(ServiceUtil serviceUtil, ProductCompositeIntegration productCompositeIntegration) {
-        this.serviceUtil = serviceUtil;
-        this.productCompositeIntegration = productCompositeIntegration;
+  private final ServiceUtil serviceUtil;
+  private final ProductCompositeIntegration integration;
+
+  public ProductCompositeServiceImpl(ServiceUtil serviceUtil, ProductCompositeIntegration integration) {
+    this.serviceUtil = serviceUtil;
+    this.integration = integration;
+  }
+
+  @Override
+  public ProductAggregate getProduct(int productId) {
+    Product product = integration.getProduct(productId);
+    List<Recommendation> recommendations = integration.getRecommendations(productId);
+    List<Review> reviews = integration.getReviews(productId);
+
+    return createProductAggregate(product, recommendations, reviews, serviceUtil.getServiceAddress());
+  }
+
+  @Override
+  public void createProduct(ProductAggregate body) {
+    try {
+      Product product = new Product(body.getProductId(),
+        body.getName(), body.getWeight(), null);
+      integration.createProduct(product);
+      if (body.getRecommendations() != null) {
+        body.getRecommendations().forEach(r -> {
+          Recommendation recommendation = new Recommendation(
+            body.getProductId(),
+            r.getRecommendationId(), r.getAuthor(), r.getRate(),
+            r.getContent(), null);
+//          integration.createRecommendation(recommendation);
+        });
+      }
+      if (body.getReviews() != null) {
+        body.getReviews().forEach(r -> {
+          Review review = new Review(body.getProductId(),
+            r.getReviewId(), r.getAuthor(), r.getSubject(),
+            r.getContent(), null);
+//          integration.createReview(review);
+        });
+      }
+    } catch (RuntimeException re) {
+      LOG.warn("createCompositeProduct failed", re);
+      throw re;
     }
+  }
 
-    @Override
-    public ProductAggregate getProduct(int productId) {
-        Product product = productCompositeIntegration.getProduct(productId);
-        List<Recommendation> recommendations = productCompositeIntegration.getRecommendations(productId);
-        List<Review> reviews = productCompositeIntegration.getReviews(productId);
 
-        return createProductAggregate(product, recommendations, reviews, serviceUtil.getServiceAddress());
-    }
+  @Override
+  public void deleteProduct(int productId) {
+    integration.deleteProduct(productId);
+//    integration.deleteRecommendations(productId);
+//    integration.deleteReviews(productId);
+  }
 
-    private ProductAggregate createProductAggregate(
-            Product product,
-            List<Recommendation> recommendations,
-            List<Review> reviews,
-            String serviceAddress) {
+  private ProductAggregate createProductAggregate(
+    Product product,
+    List<Recommendation> recommendations,
+    List<Review> reviews,
+    String serviceAddress) {
 
-        // 1. Setup product info
-        int productId = product.productId();
-        String name = product.name();
-        int weight = product.weight();
+    // 1. Setup product info
+    int productId = product.getProductId();
+    String name = product.getName();
+    int weight = product.getWeight();
 
-        // 2. Copy summary recommendation info, if available
-        List<RecommendationSummary> recommendationSummaries =
-                (recommendations == null) ? null : recommendations.stream()
-                        .map(r -> new RecommendationSummary(r.recommendationId(), r.author(), r.rate()))
-                        .collect(Collectors.toList());
+    // 2. Copy summary recommendation info, if available
+    List<RecommendationSummary> recommendationSummaries =
+      (recommendations == null) ? null : recommendations.stream()
+        .map(r -> new RecommendationSummary(r.getRecommendationId(), r.getAuthor(), r.getRate(), r.getContent()))
+        .collect(Collectors.toList());
 
-        // 3. Copy summary review info, if available
-        List<ReviewSummary> reviewSummaries =
-                (reviews == null) ? null : reviews.stream()
-                        .map(r -> new ReviewSummary(r.reviewId(), r.author(), r.subject()))
-                        .collect(Collectors.toList());
+    // 3. Copy summary review info, if available
+    List<ReviewSummary> reviewSummaries =
+      (reviews == null) ? null : reviews.stream()
+        .map(r -> new ReviewSummary(r.getReviewId(), r.getAuthor(), r.getSubject(), r.getContent()))
+        .collect(Collectors.toList());
 
-        // 4. Create info regarding the involved microservices addresses
-        String productAddress = product.serviceAddress();
-        String reviewAddress = (reviews != null && !reviews.isEmpty()) ? reviews.getFirst().serviceAddress() : "";
-        String recommendationAddress = (recommendations != null && !recommendations.isEmpty()) ? recommendations.get(0).serviceAddress() : "";
-        ServiceAddresses serviceAddresses = new ServiceAddresses(serviceAddress, productAddress, reviewAddress, recommendationAddress);
+    // 4. Create info regarding the involved microservices addresses
+    String productAddress = product.getServiceAddress();
+    String reviewAddress = (reviews != null && !reviews.isEmpty()) ? reviews.getFirst().getServiceAddress() : "";
+    String recommendationAddress = (recommendations != null && !recommendations.isEmpty()) ? recommendations.get(0).getServiceAddress() : "";
+    ServiceAddresses serviceAddresses = new ServiceAddresses(serviceAddress, productAddress, reviewAddress, recommendationAddress);
 
-        return new ProductAggregate(productId, name, weight, recommendationSummaries, reviewSummaries, serviceAddresses);
-    }
+    return new ProductAggregate(productId, name, weight, recommendationSummaries, reviewSummaries, serviceAddresses);
+  }
 }
